# deferred-renderer

./: .env.build.example  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  spirv_static_compile.sh
assets/textures/sponza/: 2051777328469649772.ktx  2185409758123873465.ktx  2299742237651021498.ktx  2775690330959970771.ktx  2969916736137545357.ktx  3628158980083700836.ktx  3827035219084910048.ktx  4477655471536070370.ktx  4675343432951571524.ktx  4910669866631290573.ktx  4975155472559461469.ktx  5061699253647017043.ktx  5792855332885324923.ktx  5823059166183034438.ktx  6047387724914829168.ktx  6151467286084645207.ktx  6667038893015345571.ktx  6772804448157695701.ktx  7056944414013900257.ktx  7268504077753552595.ktx  7441062115984513793.ktx  755318871556304029.ktx  759203620573749278.ktx  7645212358685992005.ktx  8006627369776289000.ktx  8481240838833932244.ktx  8750083169368950601.ktx  8773302468495022225.ktx  9288698199695299068.ktx  white.ktx
cmake/: env_var_parser.cmake  static_assets_compile.cmake
cmake/private/: doxygen.cmake
include/: App.h  AssetHelper.h  Camera.h  EventHandler.h  Model.h  Renderer.h  Window.h  _constants.h  macros.h  pch.h  vk.h
include/Renderer/: Base.h  Deferred.h  ScreenData.h  VkData.h
include/vk/: Attachment.h  Buffer.h  Command.h  Descriptor.h  Device.h  Framebuffer.h  Image.h  Material.h  Mesh.h  Model.h  Pipeline.h  RenderPass.h  Shader.h  Swapchain.h  Sync.h  Texture.h  Types.h  _constants.h  _macros.h  _pch.h  utils.h  vk.h
src/: App.cpp  AssetHelper.cpp  Model.cpp  Renderer.cpp  Window.cpp  main.cpp
src/Renderer/: Base.cpp  Deferred.cpp
src/vk/: Attachment.cpp  Buffer.cpp  Command.cpp  Descriptor.cpp  Device.cpp  Framebuffer.cpp  Image.cpp  Model.cpp  Pipeline.cpp  RenderPass.cpp  Shader.cpp  Swapchain.cpp  Sync.cpp  Texture.cpp
